--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "mqtt": "^4.2.3",
-    "node-cron": "^2.0.3"
+    "node-cron": "^2.0.3",
+    "opencollective-postinstall": "^2.0.3"
   }
 }
